@@ -31,9 +31,6 @@ import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.lang.management.ManagementFactory;
 import java.lang.management.OperatingSystemMXBean;
-import java.lang.reflect.InvocationHandler;
-import java.lang.reflect.Method;
-import java.lang.reflect.Proxy;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.InvalidPathException;
@@ -53,7 +50,6 @@ import java.util.ListIterator;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Properties;
-import java.util.Scanner;
 import java.util.function.BiConsumer;
 import java.util.function.BiFunction;
 import java.util.function.Consumer;
@@ -94,8 +90,7 @@ import com.oracle.svm.util.ModuleSupport;
 
 public class NativeImage {
 
-    /* Used to enable native-image JPMS support (WIP) - will become default once completed */
-    static final boolean USE_NI_JPMS = System.getenv().getOrDefault("USE_NATIVE_IMAGE_JAVA_PLATFORM_MODULE_SYSTEM", "false").equalsIgnoreCase("true");
+    private static final String ENV_VAR_USE_MODULE_SYSTEM = "USE_NATIVE_IMAGE_JAVA_PLATFORM_MODULE_SYSTEM";
 
     private static final String DEFAULT_GENERATOR_CLASS_NAME = NativeImageGeneratorRunner.class.getName();
     private static final String DEFAULT_GENERATOR_MODULE_NAME = ModuleSupport.getModuleName(NativeImageGeneratorRunner.class);
@@ -263,11 +258,60 @@ public class NativeImage {
 
     private final List<ExcludeConfig> excludedConfigs = new ArrayList<>();
 
-    public interface BuildConfiguration {
+    static class BuildConfiguration {
+
+        boolean modulePathBuild;
+
+        protected final Path workDir;
+        protected final Path rootDir;
+        protected final List<String> args;
+
+        BuildConfiguration(BuildConfiguration original) {
+            modulePathBuild = original.modulePathBuild;
+            workDir = original.workDir;
+            rootDir = original.rootDir;
+            args = new ArrayList<>(original.args);
+        }
+
+        BuildConfiguration(List<String> args) {
+            this(null, null, args);
+        }
+
+        @SuppressWarnings("deprecation")
+        BuildConfiguration(Path rootDir, Path workDir, List<String> args) {
+            modulePathBuild = Boolean.parseBoolean(System.getenv().get(ENV_VAR_USE_MODULE_SYSTEM));
+            this.args = args;
+            this.workDir = workDir != null ? workDir : Paths.get(".").toAbsolutePath().normalize();
+            if (rootDir != null) {
+                this.rootDir = rootDir;
+            } else {
+                if (IS_AOT) {
+                    Path executablePath = Paths.get(ProcessProperties.getExecutableName());
+                    assert executablePath != null;
+                    Path binDir = executablePath.getParent();
+                    Path rootDirCandidate = binDir.getParent();
+                    if (rootDirCandidate.endsWith(platform)) {
+                        rootDirCandidate = rootDirCandidate.getParent();
+                    }
+                    if (rootDirCandidate.endsWith(Paths.get("lib", "svm"))) {
+                        rootDirCandidate = rootDirCandidate.getParent().getParent();
+                    }
+                    this.rootDir = rootDirCandidate;
+                } else {
+                    String rootDirProperty = "native-image.root";
+                    String rootDirString = System.getProperty(rootDirProperty);
+                    if (rootDirString == null) {
+                        rootDirString = System.getProperty("java.home");
+                    }
+                    this.rootDir = Paths.get(rootDirString);
+                }
+            }
+        }
+
         /**
          * @return the name of the image generator main class.
          */
-        default String getGeneratorMainClass() {
+        public String getGeneratorMainClass() {
             String generatorClassName = DEFAULT_GENERATOR_CLASS_NAME;
             if (useJavaModules()) {
                 generatorClassName += DEFAULT_GENERATOR_9PLUS_SUFFIX;
@@ -279,26 +323,44 @@ public class NativeImage {
          * @return relative path usage get resolved against this path (also default path for image
          *         building)
          */
-        Path getWorkingDirectory();
+        public Path getWorkingDirectory() {
+            return workDir;
+        }
 
         /**
          * @return java.home that is associated with this BuildConfiguration
          */
-        default Path getJavaHome() {
-            throw VMError.unimplemented();
+        public Path getJavaHome() {
+            return useJavaModules() ? rootDir : rootDir.getParent();
         }
 
         /**
          * @return path to Java executable
          */
-        default Path getJavaExecutable() {
-            throw VMError.unimplemented();
+        public Path getJavaExecutable() {
+            Path binJava = Paths.get("bin", OS.getCurrent() == OS.WINDOWS ? "java.exe" : "java");
+            if (Files.isExecutable(rootDir.resolve(binJava))) {
+                return rootDir.resolve(binJava);
+            }
+
+            String javaHome = System.getenv("JAVA_HOME");
+            if (javaHome == null) {
+                throw showError("Environment variable JAVA_HOME is not set");
+            }
+            Path javaHomeDir = Paths.get(javaHome);
+            if (!Files.isDirectory(javaHomeDir)) {
+                throw showError("Environment variable JAVA_HOME does not refer to a directory");
+            }
+            if (!Files.isExecutable(javaHomeDir.resolve(binJava))) {
+                throw showError("Environment variable JAVA_HOME does not refer to a directory with a " + binJava + " executable");
+            }
+            return javaHomeDir.resolve(binJava);
         }
 
         /**
          * @return true if Java modules system should be used
          */
-        default boolean useJavaModules() {
+        public boolean useJavaModules() {
             try {
                 Class.forName("java.lang.Module");
             } catch (ClassNotFoundException e) {
@@ -310,77 +372,82 @@ public class NativeImage {
         /**
          * @return classpath for SubstrateVM image builder components
          */
-        default List<Path> getBuilderClasspath() {
-            throw VMError.unimplemented();
+        public List<Path> getBuilderClasspath() {
+            if (modulePathBuild) {
+                return Collections.emptyList();
+            }
+            List<Path> result = new ArrayList<>();
+            if (useJavaModules()) {
+                result.addAll(getJars(rootDir.resolve(Paths.get("lib", "jvmci")), "graal-sdk", "graal", "enterprise-graal"));
+            }
+            result.addAll(getJars(rootDir.resolve(Paths.get("lib", "svm", "builder"))));
+            return result;
         }
 
         /**
          * @return base clibrary paths needed for general image building
          */
-        default List<Path> getBuilderCLibrariesPaths() {
-            throw VMError.unimplemented();
+        public List<Path> getBuilderCLibrariesPaths() {
+            return Collections.singletonList(rootDir.resolve(Paths.get("lib", "svm", "clibraries")));
         }
 
         /**
          * @return path to content of the inspect web server (points-to analysis debugging)
          */
-        default Path getBuilderInspectServerPath() {
-            throw VMError.unimplemented();
+        public Path getBuilderInspectServerPath() {
+            Path inspectPath = rootDir.resolve(Paths.get("lib", "svm", "inspect"));
+            if (Files.isDirectory(inspectPath)) {
+                return inspectPath;
+            }
+            return null;
         }
 
         /**
          * @return base image classpath needed for every image (e.g. LIBRARY_SUPPORT)
          */
-        default List<Path> getImageProvidedClasspath() {
-            throw VMError.unimplemented();
+        public List<Path> getImageProvidedClasspath() {
+            return getImageProvidedJars();
         }
 
         /**
          * @return base image module-path needed for every image (e.g. LIBRARY_SUPPORT)
          */
-        default List<Path> getImageProvidedModulePath() {
-            throw VMError.unimplemented();
+        public List<Path> getImageProvidedModulePath() {
+            return getImageProvidedJars();
+        }
+
+        private List<Path> getImageProvidedJars() {
+            return getJars(rootDir.resolve(Paths.get("lib", "svm")));
         }
 
         /**
          * @return JVMCI API classpath for image builder (jvmci + graal jars)
          */
-        default List<Path> getBuilderJVMCIClasspath() {
-            throw VMError.unimplemented();
+        public List<Path> getBuilderJVMCIClasspath() {
+            return getJars(rootDir.resolve(Paths.get("lib", "jvmci")));
         }
 
         /**
          * @return entries for jvmci.class.path.append system property (if needed)
          */
-        default List<Path> getBuilderJVMCIClasspathAppend() {
-            throw VMError.unimplemented();
+        public List<Path> getBuilderJVMCIClasspathAppend() {
+            return getBuilderJVMCIClasspath().stream()
+                            .filter(f -> f.getFileName().toString().toLowerCase().endsWith("graal.jar"))
+                            .collect(Collectors.toList());
         }
 
         /**
          * @return boot-classpath for image builder (graal-sdk.jar)
          */
-        default List<Path> getBuilderBootClasspath() {
-            throw VMError.unimplemented();
+        public List<Path> getBuilderBootClasspath() {
+            return getJars(rootDir.resolve(Paths.get("lib", "boot")));
         }
 
         /**
          * @return additional arguments for JVM that runs image builder
          */
-        default List<String> getBuilderJavaArgs() {
-            String javaVersion = String.valueOf(JavaVersionUtil.JAVA_SPEC);
-            String[] flagsForVersion = graalCompilerFlags.get(javaVersion);
-            if (flagsForVersion == null) {
-                String suffix = "";
-                if (System.getProperty("java.home").contains("-dev")) {
-                    suffix = " Update SubstrateCompilerFlagsBuilder.compute_graal_compiler_flags_map() in " +
-                                    "mx_substratevm.py to add a configuration for a new Java version.";
-                }
-                showError(String.format("Image building not supported for Java version %s in %s with VM configuration \"%s\".%s",
-                                System.getProperty("java.version"),
-                                System.getProperty("java.home"),
-                                System.getProperty("java.vm.name"),
-                                suffix));
-            }
+        public List<String> getBuilderJavaArgs() {
+            ArrayList<String> builderJavaArgs = new ArrayList<>();
 
             if (useJVMCINativeLibrary == null) {
                 useJVMCINativeLibrary = false;
@@ -414,198 +481,50 @@ public class NativeImage {
                 }
             }
 
-            ArrayList<String> builderJavaArgs = new ArrayList<>();
-            builderJavaArgs.addAll(Arrays.asList(flagsForVersion));
             if (useJVMCINativeLibrary) {
                 builderJavaArgs.add("-XX:+UseJVMCINativeLibrary");
             } else {
                 builderJavaArgs.add("-XX:-UseJVMCICompiler");
             }
+
+            String javaVersion = String.valueOf(JavaVersionUtil.JAVA_SPEC);
+            String[] flagsForVersion = graalCompilerFlags.get(javaVersion);
+            if (flagsForVersion == null) {
+                String suffix = "";
+                if (System.getProperty("java.home").contains("-dev")) {
+                    suffix = " Update SubstrateCompilerFlagsBuilder.compute_graal_compiler_flags_map() in " +
+                                    "mx_substratevm.py to add a configuration for a new Java version.";
+                }
+                showError(String.format("Image building not supported for Java version %s in %s with VM configuration \"%s\".%s",
+                                System.getProperty("java.version"),
+                                System.getProperty("java.home"),
+                                System.getProperty("java.vm.name"),
+                                suffix));
+            }
+
+            for (String line : flagsForVersion) {
+                if (!modulePathBuild && line.startsWith("--add-exports=")) {
+                    /*-
+                     * Turns e.g.
+                     * --add-exports=jdk.internal.vm.ci/jdk.vm.ci.code.stack=jdk.internal.vm.compiler,org.graalvm.nativeimage.builder
+                     * into:
+                     * --add-exports=jdk.internal.vm.ci/jdk.vm.ci.code.stack=ALL-UNNAMED
+                     */
+                    builderJavaArgs.add(line.substring(0, line.lastIndexOf('=') + 1) + "ALL-UNNAMED");
+                } else {
+                    builderJavaArgs.add(line);
+                }
+            }
+
             return builderJavaArgs;
         }
 
         /**
          * @return entries for the --module-path of the image builder
          */
-        default List<Path> getBuilderModulePath() {
-            throw VMError.unimplemented();
-        }
-
-        /**
-         * @return entries for the --upgrade-module-path of the image builder
-         */
-        default List<Path> getBuilderUpgradeModulePath() {
-            throw VMError.unimplemented();
-        }
-
-        /**
-         * @return classpath for image (the classes the user wants to build an image from)
-         */
-        default List<Path> getImageClasspath() {
-            throw VMError.unimplemented();
-        }
-
-        /**
-         * @return native-image (i.e. image build) arguments
-         */
-        default List<String> getBuildArgs() {
-            throw VMError.unimplemented();
-        }
-
-        /**
-         * @return true for fallback image building
-         */
-        default boolean buildFallbackImage() {
-            return false;
-        }
-
-        default Path getAgentJAR() {
-            return null;
-        }
-
-        /**
-         * ResourcesJar packs resources files needed for some jdk services such as xml
-         * serialization.
-         *
-         * @return the path to the resources.jar file
-         */
-        default Optional<Path> getResourcesJar() {
-            return Optional.empty();
-        }
-    }
-
-    protected static class DefaultBuildConfiguration implements BuildConfiguration {
-        protected final Path workDir;
-        protected final Path rootDir;
-        protected final List<String> args;
-
-        protected DefaultBuildConfiguration(List<String> args) {
-            this(null, null, args);
-        }
-
-        @SuppressWarnings("deprecation")
-        DefaultBuildConfiguration(Path rootDir, Path workDir, List<String> args) {
-            this.args = args;
-            this.workDir = workDir != null ? workDir : Paths.get(".").toAbsolutePath().normalize();
-            if (rootDir != null) {
-                this.rootDir = rootDir;
-            } else {
-                if (IS_AOT) {
-                    Path executablePath = Paths.get(ProcessProperties.getExecutableName());
-                    assert executablePath != null;
-                    Path binDir = executablePath.getParent();
-                    Path rootDirCandidate = binDir.getParent();
-                    if (rootDirCandidate.endsWith(platform)) {
-                        rootDirCandidate = rootDirCandidate.getParent();
-                    }
-                    if (rootDirCandidate.endsWith(Paths.get("lib", "svm"))) {
-                        rootDirCandidate = rootDirCandidate.getParent().getParent();
-                    }
-                    this.rootDir = rootDirCandidate;
-                } else {
-                    String rootDirProperty = "native-image.root";
-                    String rootDirString = System.getProperty(rootDirProperty);
-                    if (rootDirString == null) {
-                        rootDirString = System.getProperty("java.home");
-                    }
-                    this.rootDir = Paths.get(rootDirString);
-                }
-            }
-        }
-
-        @Override
-        public Path getWorkingDirectory() {
-            return workDir;
-        }
-
-        @Override
-        public Path getJavaHome() {
-            return useJavaModules() ? rootDir : rootDir.getParent();
-        }
-
-        @Override
-        public Path getJavaExecutable() {
-            Path binJava = Paths.get("bin", OS.getCurrent() == OS.WINDOWS ? "java.exe" : "java");
-            if (Files.isExecutable(rootDir.resolve(binJava))) {
-                return rootDir.resolve(binJava);
-            }
-
-            String javaHome = System.getenv("JAVA_HOME");
-            if (javaHome == null) {
-                throw showError("Environment variable JAVA_HOME is not set");
-            }
-            Path javaHomeDir = Paths.get(javaHome);
-            if (!Files.isDirectory(javaHomeDir)) {
-                throw showError("Environment variable JAVA_HOME does not refer to a directory");
-            }
-            if (!Files.isExecutable(javaHomeDir.resolve(binJava))) {
-                throw showError("Environment variable JAVA_HOME does not refer to a directory with a " + binJava + " executable");
-            }
-            return javaHomeDir.resolve(binJava);
-        }
-
-        @Override
-        public List<Path> getBuilderClasspath() {
-            if (USE_NI_JPMS) {
-                return Collections.emptyList();
-            }
-            List<Path> result = new ArrayList<>();
-            if (useJavaModules()) {
-                result.addAll(getJars(rootDir.resolve(Paths.get("lib", "jvmci")), "graal-sdk", "graal", "enterprise-graal"));
-            }
-            result.addAll(getJars(rootDir.resolve(Paths.get("lib", "svm", "builder"))));
-            return result;
-        }
-
-        @Override
-        public List<Path> getBuilderCLibrariesPaths() {
-            return Collections.singletonList(rootDir.resolve(Paths.get("lib", "svm", "clibraries")));
-        }
-
-        @Override
-        public List<Path> getImageProvidedClasspath() {
-            return getImageProvidedJars();
-        }
-
-        @Override
-        public List<Path> getImageProvidedModulePath() {
-            return getImageProvidedJars();
-        }
-
-        private List<Path> getImageProvidedJars() {
-            return getJars(rootDir.resolve(Paths.get("lib", "svm")));
-        }
-
-        @Override
-        public Path getBuilderInspectServerPath() {
-            Path inspectPath = rootDir.resolve(Paths.get("lib", "svm", "inspect"));
-            if (Files.isDirectory(inspectPath)) {
-                return inspectPath;
-            }
-            return null;
-        }
-
-        @Override
-        public List<Path> getBuilderJVMCIClasspath() {
-            return getJars(rootDir.resolve(Paths.get("lib", "jvmci")));
-        }
-
-        @Override
-        public List<Path> getBuilderJVMCIClasspathAppend() {
-            return getBuilderJVMCIClasspath().stream()
-                            .filter(f -> f.getFileName().toString().toLowerCase().endsWith("graal.jar"))
-                            .collect(Collectors.toList());
-        }
-
-        @Override
-        public List<Path> getBuilderBootClasspath() {
-            return getJars(rootDir.resolve(Paths.get("lib", "boot")));
-        }
-
-        @Override
         public List<Path> getBuilderModulePath() {
             List<Path> result = new ArrayList<>();
-            if (USE_NI_JPMS) {
+            if (modulePathBuild) {
                 result.addAll(getJars(rootDir.resolve(Paths.get("lib", "svm", "builder"))));
             } else {
                 result.addAll(getJars(rootDir.resolve(Paths.get("lib", "jvmci")), "graal-sdk", "enterprise-graal"));
@@ -614,17 +533,23 @@ public class NativeImage {
             return result;
         }
 
-        @Override
+        /**
+         * @return entries for the --upgrade-module-path of the image builder
+         */
         public List<Path> getBuilderUpgradeModulePath() {
             return getJars(rootDir.resolve(Paths.get("lib", "jvmci")), "graal", "graal-management");
         }
 
-        @Override
+        /**
+         * @return classpath for image (the classes the user wants to build an image from)
+         */
         public List<Path> getImageClasspath() {
             return Collections.emptyList();
         }
 
-        @Override
+        /**
+         * @return native-image (i.e. image build) arguments
+         */
         public List<String> getBuildArgs() {
             if (args.isEmpty()) {
                 return Collections.emptyList();
@@ -636,12 +561,23 @@ public class NativeImage {
             return buildArgs;
         }
 
-        @Override
+        /**
+         * @return true for fallback image building
+         */
+        public boolean buildFallbackImage() {
+            return false;
+        }
+
         public Path getAgentJAR() {
             return rootDir.resolve(Paths.get("lib", "svm", "builder", "svm.jar"));
         }
 
-        @Override
+        /**
+         * ResourcesJar packs resources files needed for some jdk services such as xml
+         * serialization.
+         *
+         * @return the path to the resources.jar file
+         */
         public Optional<Path> getResourcesJar() {
             return Optional.of(rootDir.resolve(Paths.get("lib", "resources.jar")));
         }
@@ -761,35 +697,28 @@ public class NativeImage {
         return buildArgs;
     }
 
-    private static final class FallbackBuildConfiguration implements InvocationHandler {
-        private final NativeImage original;
-        private final List<String> buildArgs;
+    private static final class FallbackBuildConfiguration extends BuildConfiguration {
+
+        private final List<String> fallbackBuildArgs;
 
         private FallbackBuildConfiguration(NativeImage original) {
-            this.original = original;
-            this.buildArgs = original.createFallbackBuildArgs();
-        }
-
-        static BuildConfiguration create(NativeImage imageName) {
-            FallbackBuildConfiguration handler = new FallbackBuildConfiguration(imageName);
-            BuildConfiguration fallback = (BuildConfiguration) Proxy.newProxyInstance(BuildConfiguration.class.getClassLoader(),
-                            new Class<?>[]{BuildConfiguration.class},
-                            handler);
-            return fallback;
+            super(original.config);
+            fallbackBuildArgs = original.createFallbackBuildArgs();
         }
 
         @Override
-        public Object invoke(Object proxy, Method method, Object[] args) throws Throwable {
-            switch (method.getName()) {
-                case "getImageClasspath":
-                    return Collections.emptyList();
-                case "getBuildArgs":
-                    return buildArgs;
-                case "buildFallbackImage":
-                    return true;
-                default:
-                    return method.invoke(original.config, args);
-            }
+        public List<Path> getImageClasspath() {
+            return Collections.emptyList();
+        }
+
+        @Override
+        public List<String> getBuildArgs() {
+            return fallbackBuildArgs;
+        }
+
+        @Override
+        public boolean buildFallbackImage() {
+            return true;
         }
     }
 
@@ -859,7 +788,6 @@ public class NativeImage {
     }
 
     private void prepareImageBuildArgs() {
-        config.getBuilderJavaArgs().forEach(this::addImageBuilderJavaArgs);
         addImageBuilderJavaArgs("-Xss10m");
         addImageBuilderJavaArgs(oXms + getXmsValue());
         String xmxVal = getXmxValue(1);
@@ -882,32 +810,6 @@ public class NativeImage {
          * non-system class and and triggers a warning.
          */
         addImageBuilderJavaArgs("-Xshare:off");
-        config.getBuilderClasspath().forEach(this::addImageBuilderClasspath);
-
-        if (config.getBuilderInspectServerPath() != null) {
-            addPlainImageBuilderArg(oHInspectServerContentPath + config.getBuilderInspectServerPath());
-        }
-
-        if (config.useJavaModules()) {
-            config.getBuilderModulePath().forEach(this::addImageBuilderModulePath);
-            String upgradeModulePath = config.getBuilderUpgradeModulePath().stream()
-                            .map(p -> canonicalize(p).toString())
-                            .collect(Collectors.joining(File.pathSeparator));
-            if (!upgradeModulePath.isEmpty()) {
-                addImageBuilderJavaArgs(Arrays.asList("--upgrade-module-path", upgradeModulePath));
-            }
-        } else {
-            config.getBuilderJVMCIClasspath().forEach((Consumer<? super Path>) this::addImageBuilderClasspath);
-            if (!config.getBuilderJVMCIClasspathAppend().isEmpty()) {
-                String builderJavaArg = config.getBuilderJVMCIClasspathAppend()
-                                .stream().map(path -> canonicalize(path).toString())
-                                .collect(Collectors.joining(File.pathSeparator, "-Djvmci.class.path.append=", ""));
-                addImageBuilderJavaArgs(builderJavaArg);
-            }
-
-            config.getBuilderBootClasspath().forEach((Consumer<? super Path>) this::addImageBuilderBootClasspath);
-            config.getResourcesJar().ifPresent(this::addImageBuilderClasspath);
-        }
 
         config.getImageClasspath().forEach(this::addCustomImageClasspath);
     }
@@ -1084,6 +986,33 @@ public class NativeImage {
     private int completeImageBuild() {
         List<String> leftoverArgs = processNativeImageArgs();
 
+        config.getBuilderClasspath().forEach(this::addImageBuilderClasspath);
+
+        if (config.getBuilderInspectServerPath() != null) {
+            addPlainImageBuilderArg(oHInspectServerContentPath + config.getBuilderInspectServerPath());
+        }
+
+        if (config.useJavaModules()) {
+            config.getBuilderModulePath().forEach(this::addImageBuilderModulePath);
+            String upgradeModulePath = config.getBuilderUpgradeModulePath().stream()
+                            .map(p -> canonicalize(p).toString())
+                            .collect(Collectors.joining(File.pathSeparator));
+            if (!upgradeModulePath.isEmpty()) {
+                addImageBuilderJavaArgs(Arrays.asList("--upgrade-module-path", upgradeModulePath));
+            }
+        } else {
+            config.getBuilderJVMCIClasspath().forEach((Consumer<? super Path>) this::addImageBuilderClasspath);
+            if (!config.getBuilderJVMCIClasspathAppend().isEmpty()) {
+                String builderJavaArg = config.getBuilderJVMCIClasspathAppend()
+                                .stream().map(path -> canonicalize(path).toString())
+                                .collect(Collectors.joining(File.pathSeparator, "-Djvmci.class.path.append=", ""));
+                addImageBuilderJavaArgs(builderJavaArg);
+            }
+
+            config.getBuilderBootClasspath().forEach((Consumer<? super Path>) this::addImageBuilderBootClasspath);
+            config.getResourcesJar().ifPresent(this::addImageBuilderClasspath);
+        }
+
         completeOptionArgs();
         addTargetArguments();
 
@@ -1163,7 +1092,7 @@ public class NativeImage {
                 boolean hasMainClass = mainClass != null && !mainClass.isEmpty();
                 if (extraImageArgs.isEmpty()) {
                     if (buildExecutable && !hasMainClassModule && !hasMainClass) {
-                        String moduleMsg = USE_NI_JPMS ? " (or <module>/<mainclass>)" : "";
+                        String moduleMsg = config.modulePathBuild ? " (or <module>/<mainclass>)" : "";
                         showError("Please specify class" + moduleMsg + " containing the main entry point method. (see --help)");
                     }
                 } else if (!moduleOptionMode) {
@@ -1217,7 +1146,7 @@ public class NativeImage {
         finalImageClasspath.addAll(imageClasspath);
 
         List<Path> imageProvidedJars;
-        if (USE_NI_JPMS) {
+        if (config.modulePathBuild) {
             imageProvidedJars = config.getImageProvidedModulePath();
             finalImageModulePath.addAll(imageProvidedJars);
         } else {
@@ -1230,7 +1159,9 @@ public class NativeImage {
             /* Bypass regular build and proceed with fallback image building */
             return 2;
         }
-        return buildImage(imageBuilderJavaArgs, imageBuilderBootClasspath, imageBuilderClasspath, imageBuilderModulePath, imageBuilderArgs, finalImageClasspath, finalImageModulePath);
+
+        List<String> finalImageBuilderJavaArgs = Stream.concat(config.getBuilderJavaArgs().stream(), imageBuilderJavaArgs.stream()).collect(Collectors.toList());
+        return buildImage(finalImageBuilderJavaArgs, imageBuilderBootClasspath, imageBuilderClasspath, imageBuilderModulePath, imageBuilderArgs, finalImageClasspath, finalImageModulePath);
     }
 
     private static String getLocationAgnosticArgPrefix(String argPrefix) {
@@ -1406,7 +1337,7 @@ public class NativeImage {
             arguments.addAll(strings);
         }
 
-        if (USE_NI_JPMS) {
+        if (config.modulePathBuild) {
             arguments.addAll(Arrays.asList("--module", DEFAULT_GENERATOR_MODULE_NAME + "/" + DEFAULT_GENERATOR_CLASS_NAME));
         } else {
             arguments.add(config.getGeneratorMainClass());
@@ -1452,6 +1383,9 @@ public class NativeImage {
         try {
             ProcessBuilder pb = new ProcessBuilder();
             pb.command(command);
+            if (config.modulePathBuild) {
+                pb.environment().put(ENV_VAR_USE_MODULE_SYSTEM, Boolean.toString(true));
+            }
             p = pb.inheritIO().start();
             exitStatus = p.waitFor();
         } catch (IOException | InterruptedException e) {
@@ -1467,7 +1401,7 @@ public class NativeImage {
     private static final Function<BuildConfiguration, NativeImage> defaultNativeImageProvider = config -> new NativeImage(config);
 
     public static void main(String[] args) {
-        performBuild(new DefaultBuildConfiguration(Arrays.asList(args)), defaultNativeImageProvider);
+        performBuild(new BuildConfiguration(Arrays.asList(args)), defaultNativeImageProvider);
     }
 
     public static void build(BuildConfiguration config) {
@@ -1475,7 +1409,7 @@ public class NativeImage {
     }
 
     public static void agentBuild(Path javaHome, Path workDir, List<String> buildArgs) {
-        performBuild(new DefaultBuildConfiguration(javaHome, workDir, buildArgs), NativeImage::new);
+        performBuild(new BuildConfiguration(javaHome, workDir, buildArgs), NativeImage::new);
     }
 
     private static void performBuild(BuildConfiguration config, Function<BuildConfiguration, NativeImage> nativeImageProvider) {
@@ -1513,7 +1447,7 @@ public class NativeImage {
             int buildStatus = nativeImage.completeImageBuild();
             if (buildStatus == 2) {
                 /* Perform fallback build */
-                build(FallbackBuildConfiguration.create(nativeImage), nativeImageProvider);
+                build(new FallbackBuildConfiguration(nativeImage), nativeImageProvider);
                 showWarning("Image '" + nativeImage.imageName +
                                 "' is a fallback image that requires a JDK for execution " +
                                 "(use --" + SubstrateOptions.OptionNameNoFallback +
@@ -1625,47 +1559,6 @@ public class NativeImage {
 
     LinkedHashSet<String> builderModuleNames = null;
 
-    LinkedHashSet<String> getBuilderModuleNames() {
-        if (builderModuleNames == null) {
-            ProcessBuilder pb = new ProcessBuilder();
-            List<String> command = pb.command();
-            command.add(config.getJavaExecutable().toString());
-            command.add("--module-path");
-            command.add(Stream.concat(config.getBuilderModulePath().stream(), config.getImageProvidedModulePath().stream())
-                            .map(this::canonicalize).map(Path::toString)
-                            .collect(Collectors.joining(File.pathSeparator)));
-            command.add("--list-modules");
-            pb.redirectErrorStream();
-            Process process = null;
-            int exitValue = -1;
-            LinkedHashSet<String> modules = new LinkedHashSet<>();
-            String message = "Unable to determine image builder modules";
-            try {
-                process = pb.start();
-                try (Scanner scanner = new Scanner(process.getInputStream())) {
-                    while (scanner.hasNextLine()) {
-                        String token = scanner.next();
-                        modules.add(token.split("@", 2)[0]);
-                        scanner.nextLine();
-                    }
-                }
-                exitValue = process.waitFor();
-            } catch (IOException | InterruptedException e) {
-                throw showError(message, e);
-            } finally {
-                if (process != null) {
-                    process.destroy();
-                }
-                if (exitValue != 0) {
-                    throw showError(message + " (nonzero exit value)");
-                }
-            }
-
-            builderModuleNames = modules;
-        }
-        return builderModuleNames;
-    }
-
     void addImageModulePath(Path modulePathEntry) {
         addImageModulePath(modulePathEntry, true);
     }
@@ -1691,34 +1584,10 @@ public class NativeImage {
             /* Duplicate entries are silently ignored like with the java command */
             return;
         }
-        List<String> moduleNames = getModuleNames(mpEntry);
-        if (moduleNames.size() == 1) {
-            String moduleName = moduleNames.get(0);
-            if (getBuilderModuleNames().contains(moduleName)) {
-                /* Modules provided by the image-builder are not allowed on the -imagemp */
-                String modulePathEntryStr = "module " + moduleName + " from " + modulePathEntry;
-                showWarning("Ignoring " + modulePathEntryStr + " (implicitly provided by builder)");
-                return;
-            }
-        }
 
+        config.modulePathBuild = true;
         imageModulePath.add(mpEntry);
         processClasspathNativeImageMetaInf(mpEntry);
-    }
-
-    @SuppressWarnings("unchecked")
-    List<String> getModuleNames(Path... modulePathEntries) {
-        try {
-            Class<?> moduleAccess = Class.forName("com.oracle.svm.driver.jdk11.ModuleAccess");
-            Method getModuleNames = moduleAccess.getMethod("getModuleNames", Path[].class);
-            return (List<String>) getModuleNames.invoke(null, (Object) modulePathEntries);
-        } catch (ClassNotFoundException e) {
-            throw showError("com.oracle.svm.driver.jdk11.ModuleAccess.getModuleNames only available on Java > 8");
-        } catch (ReflectiveOperationException e) {
-            String entries = Arrays.stream(modulePathEntries)
-                            .map(Path::toString).collect(Collectors.joining(", ", "[", "]"));
-            throw showError("Failed to get module-names for " + entries, e);
-        }
     }
 
     /**
@@ -1789,6 +1658,7 @@ public class NativeImage {
 
     void setModuleOptionMode(boolean val) {
         moduleOptionMode = val;
+        config.modulePathBuild = true;
     }
 
     boolean isVerbose() {
